Moved legend and bottom legend bottom axis over to stop axis from being cutoff

--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+html,body {
+    font-family: Arial, Helvetica, sans-serif;
+}
 h1, h2 {
     text-align: center;
 }
